log
Sun 08 Oct 2023 11:08:46 PM UTC: 
 tests:  0|5
total_score: 0/70
066d536
Sun 08 Oct 2023 11:13:43 PM UTC: 
 sudoku.c | 8 ++++++++
 1 file changed, 8 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:59:12: error: implicit declaration of function ‘append’ [-Werror=implicit-function-declaration]
   59 |       list=append(list, adj_node);
      |            ^~~~~~
sudoku.c:59:11: error: assignment to ‘List *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
   59 |       list=append(list, adj_node);
      |           ^
cc1: all warnings being treated as errors
Compilation failed
dbc2f8c
